--- a/static/css/item.css
+++ b/static/css/item.css
@@ -31,3 +31,16 @@ img.item-icon {
   margin: 0.3rem;
   padding-left: 1rem;
 }
+
+#itemData div.card-body {
+  padding: 0.3rem !important;
+}
+
+.item-card {
+  width: 18%;
+  margin: 0.25rem;
+}
+
+ul#info li.list-group-item {
+  padding: 0.25rem !important;
+}
